<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>MsgUI1</groupId>
  <artifactId>MsgUI1</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>war</packaging>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <message-core-version>1.0.0-SNAPSHOT</message-core-version>
    <java.version>16</java.version>
  	<mysql.connector.version>8.0.16</mysql.connector.version>
    <commons-digester-version>2.1</commons-digester-version>
    <jstl.version>1.2</jstl.version>
    <javax.faces-version>1.2-20</javax.faces-version>
    <apache.tiles-version>2.2.2</apache.tiles-version>
    <tomcat.version>7.0.72</tomcat.version>
  </properties>
  
  
  <dependencies>
	<dependency>
		<groupId>MessageCore1</groupId>
		<artifactId>MessageCore1</artifactId>
		<version>${message-core-version}</version>
	</dependency>
	
	<dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
  		<version>${mysql.connector.version}</version>
  	</dependency>

	<dependency>
		<groupId>jakarta.servlet</groupId>
		<artifactId>jakarta.servlet-api</artifactId>
		<version>4.0.4</version>
		<scope>provided</scope>
	</dependency>
	
	<dependency>
  		<groupId>jstl</groupId>
  		<artifactId>jstl</artifactId>
  		<version>${jstl.version}</version>
  	</dependency>
  	
	<dependency>
	    <groupId>javax.faces</groupId>
	    <artifactId>jsf-api</artifactId>
	    <version>${javax.faces-version}</version>
	</dependency>
	
	<dependency>
	    <groupId>javax.faces</groupId>
	    <artifactId>jsf-impl</artifactId>
	    <version>${javax.faces-version}</version>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.tiles</groupId>
	    <artifactId>tiles-api</artifactId>
	    <version>${apache.tiles-version}</version>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.tiles</groupId>
	    <artifactId>tiles-core</artifactId>
	    <version>${apache.tiles-version}</version>
	    <exclusions>
	    	<exclusion>
	    		<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
	    	</exclusion>
	    </exclusions>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.tiles</groupId>
	    <artifactId>tiles-jsp</artifactId>
	    <version>${apache.tiles-version}</version>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.tiles</groupId>
	    <artifactId>tiles-portlet</artifactId>
	    <version>${apache.tiles-version}</version>
	</dependency>
	
	<dependency>
	    <groupId>javax.portlet</groupId>
	    <artifactId>portlet-api</artifactId>
	    <version>2.0</version>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.tomcat</groupId>
	    <artifactId>tomcat-catalina</artifactId>
	    <version>${tomcat.version}</version>
	    <scope>provided</scope>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.tomcat</groupId>
	    <artifactId>tomcat-servlet-api</artifactId>
	    <version>${tomcat.version}</version>
	    <scope>provided</scope>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.tomcat</groupId>
	    <artifactId>tomcat-coyote</artifactId>
	    <version>${tomcat.version}</version>
	    <scope>provided</scope>
	</dependency>

	<dependency>
	    <groupId>org.apache.tomcat</groupId>
	    <artifactId>tomcat-jasper</artifactId>
	    <version>${tomcat.version}</version>
	    <scope>provided</scope>
	</dependency>
	
  </dependencies>
  
  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
          <exclude>**/*.txt</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
			<source>${java.version}</source>
			<target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <warSourceDirectory>WebContent</warSourceDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>